# thunder-subtitle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WEB_UI_README.md  docker-compose.yml  pyproject.toml  pyproject.toml.tmp  run_fastapi_ui.py  start_fastapi_ui.py  ui_config.example.json
.github/workflows/: build-binaries.yml
packaging/: thunder-subtitle-fastapi.spec  thunder-subtitle.spec
scripts/: build_exe.py  run_web_ui.py  smb_list_doraemon.py
src/thunder_subtitle_cli/: __main__.py  ai_evaluator.py  cli.py  client.py  core.py  directory_watcher.py  formatting.py  models.py  selector.py  smb_list.py  tui.py  util.py  web_ui.py  web_ui_fastapi.py
templates/: index.html  test.html
tests/: test_ai_quality.py  test_cli_default_behavior.py  test_client_search.py  test_deepseek_quality.py  test_selector.py  test_smb_list_unit.py  test_subtitle_quality.py  test_tui_core.py  test_util.py
tests/integration/: test_smb_list.py
